--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,9 +1,15 @@
-/* Подключаем стили со шрифтами, так как они нужны на всех страницах */
+:root {
+	--font-family: 'Open Sans', sans-serif;
+	--font-size: 18px;
+	--font-color: #000000;
+	--bg-color: #ffffff;
+	--container-width: 1394px;
+}
 
+/* Подключаем стили со шрифтами */
 @import '~fonts/font';
 
 /* Отключаем браузерные дефолтные стили для всех элементов */
-
 html,
 div,
 span,
@@ -85,14 +91,12 @@ mark,
 audio,
 video {
 	margin: 0;
+	border: 0;
 	padding: 0;
+	vertical-align: baseline;
 	font: inherit;
 	font-size: 100%;
-	vertical-align: baseline;
-	border: 0;
 }
-
-/* HTML5 display-role reset for older browsers */
 
 article,
 aside,
@@ -110,12 +114,15 @@ section {
 
 body {
 	margin: 0;
-	padding: 0;
-	font: inherit;
-	font-size: 100%;
-	line-height: 1;
-	vertical-align: baseline;
 	border: 0;
+	padding: 0;
+	vertical-align: baseline;
+	color: var(--font-color);
+	font-family: var(--font-family);
+	font-size: var(--font-size);
+	line-height: 1;
+	background-color: var(--bg-color);
+	transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 ol,
